<resources>
    <string name="app_name">Blood Donor</string>

    <string name="but_showDonations">Click me to see list of donations! :)</string>
    <string name="but_showStations">Click me to see list of stations! :)</string>
    <string name="but_showMap">Click me to see a map! :)</string>

    <string name="listDist_welcome">Distance to Stations list is will appear below</string>

    <string name="listS_welcome">Stations list is will appear below</string>
    <string name="but_finishSLA_label">Back</string>

    <string name="listD_welcome">Donations list is will appear below</string>
    <string name="but_finishDLA_label">Back</string>

    <string name="but_manage_users">Settings</string>
    <string name="but_manage_donations">Manage donations</string>
    <string name="but_manage_stations">Manage stations</string>


    <string name="but_addStation_label">Add Station</string>
    <string name="but_delStation_label">Delete Station</string>
    <string name="stationId_label">Station ID</string>
    <string name="stationName_label">Station Name</string>

    <string name="donorID_label">Donor ID</string>
    <string name="but_addDonation_label">Add Donation</string>
    <string name="but_delDonation_label">Delete Donation</string>
    <string name="but_backToMain_label">Back To Main</string>

    <string name="but_bloodTypesPopUp_label">Select Blood Type</string>
    <string name="userNick_label">Nick</string>
    <string name="but_addUser_label">Add User</string>
    <string name="but_updateNick_label">Update Nick</string>
    <string name="but_updateBloodType_label">Update Blood Type</string>

    <string name="debugOK">OK</string>
    <string name="debugWrong">Wrong</string>
    <string name="title_activity_maps">Map</string>

    <string name="APlus">A+</string>
    <string name="AMinus">A-</string>
    <string name="BPlus">B+</string>
    <string name="BMinus">B-</string>
    <string name="ABPlus">AB+</string>
    <string name="ABMinus">AB-</string>
    <string name="ZeroPlus">0+</string>
    <string name="ZeroMinus">0-</string>
    <string name="but_showDistList">Show distance list</string>

    <string name="but_pickDate_label">Pick date</string>
    <string name="but_pickDonationType_label">Donation type</string>
    <string name="but_pickStation_label">Pick station</string>

    <string name="but_whole_blood">Whole blood</string>
    <string name="but_blood_plasma">Blood plasma</string>
    <string name="but_blood_cells">Blood cells</string>
    <string name="but_red_cells">Red cells</string>
    <string name="but_white_cells">White cells</string>
    <string name="volume_label">Volume/Unit</string>

    <string name="but_delUser_label">delete user</string>
    <string name="but_finishSettings_label">finish Settings</string>

    <string name="pick_label">Pick</string>

</resources>
