<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/helloDonor_label"
        android:id="@+id/helloDonor"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/FLL_f_addNick"
        android:layout_alignEnd="@+id/FLL_but_selectBloodType"
        android:layout_alignStart="@+id/FLL_but_selectBloodType"
        android:layout_below="@+id/helloDonor"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/userNick_label"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/FLL_f_addNick"
        android:layout_toStartOf="@+id/FLL_f_addNick"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="7dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_showPopUpBloodTypes"
        android:text="@string/but_bloodTypesPopUp_label"
        android:id="@+id/FLL_but_selectBloodType"
        android:layout_below="@+id/FLL_f_addNick"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FAL_b_addUser"
        android:text="@string/but_addUser_label"
        android:onClick="onClick_addUser"
        android:layout_below="@+id/FLL_but_selectBloodType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

</RelativeLayout>