<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MUL_f_updateNick"
        android:id="@+id/MUL_updateNick-label"
        android:layout_marginLeft="0dp"
        android:layout_alignTop="@+id/MUL_updateNick"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/MUL_updateNick"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="242dp"
        android:layout_alignBaseline="@+id/but_updateNick"
        android:layout_alignBottom="@+id/but_updateNick"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_updateNick_label"
        android:id="@+id/but_updateNick"
        android:onClick="onClick_UpdateNick"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="168dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_updateBloodType_label"
        android:id="@+id/but_updateBloodType"
        android:onClick="onClick_showUpdatePopUpBloodTypes"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="244dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_delUser_label"
        android:id="@+id/but_delUser"
        android:onClick="onClick_deleteUser"
        android:layout_marginTop="630dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="273dp"
        android:layout_alignParentTop="true" />

</RelativeLayout>